# SServer

./: CMakeLists.txt  README.txt  main.cpp  shserver.cpp  shserver.hpp
